# cookiecutter-template

./: README.md  cookiecutter.json  poetry.toml  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: publish.yml
{{cookiecutter.project_name}}/notebooks/: workbench.ipynb
{{cookiecutter.project_name}}/tests/: test_foo.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
