[tool.poetry]
name = "cookiecutter-template"
version = "0.0.1"
description = "A python cookiecutter template to create a new python project that uses poetry to manage its dependencies."
authors = ["Ioannis Kavadakis <gkavadakis@gmail.com>"]
repository = "https://github.com/GiannisKav/cookiecutter-template"
documentation = "https://github.com/GiannisKav/cookiecutter-template"
readme = "README.md"
keywords = ['cookiecutter', 'template', 'poetry', 'python']
include = ['{{cookiecutter.project_name}}/**/*', 'cookiecutter.json', 'hooks/*']

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-cookies = "^0.6.1"
tox = "^3.25.1"
deptry = "^0.12.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.8"
vulture = "^2.11"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
extend_exclude = ["{{cookiecutter.project_name}}"]

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.vulture]
paths = ["{{cookiecutter.project_name}}"]
sort_by_size = true
