[project]
name = "cookiecutter-template"
version = "0.0.1"
description = "A python cookiecutter template to create a new python project that uses uv to manage its dependencies."
authors = [{ name = "Ioannis Kavadakis", email = "gkavadakis@gmail.com" }]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'uv', 'python']
requires-python = ">=3.10, <4.0"
dependencies = ["cookiecutter >= 2.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "deptry>=0.20.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "tox>=4.18.1",
    "vulture>=2.11",
]

[tool.deptry]
extend_exclude = ["{{cookiecutter.project_name}}"]

[tool.ruff]
target-version = "py38"
line-length = 100
fix = true
[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.vulture]
paths = ["{{cookiecutter.project_name}}"]
sort_by_size = true
