[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.uv]
dev-dependencies = [
    "deptry>=0.20.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "tox>=4.18.1",
    "vulture>=2.11",
    {% if cookiecutter.codecov == 'y' -%}
    "pytest-cov>=5.0.0",
    {% endif -%}
    {% if cookiecutter.mypy == 'y' -%}
    "mypy>=1.11.2",
    {% endif -%}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{% if cookiecutter.mypy == 'y' -%}
[tool.mypy]
files = ["{{cookiecutter.project_slug}}", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
{% endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]
{% if cookiecutter.codecov == "y"-%}
addopts = """
    --cov={{cookiecutter.project_slug}}
    --cov-config=pyproject.toml
    --cov-report=term
    --cov-report=lcov:lcov.info
"""
{%- else %}
addopts = "--doctest-modules"
{% endif %}

[tool.ruff]
target-version = "py38"
exclude = ["vulture_whitelist.py"]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{%- endif %}

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.vulture]
paths = ["{{cookiecutter.project_slug}}", "vulture_whitelist.py"]
sort_by_size = true
