[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.uv]
dev-dependencies = [
    "deptry",
    "ipykernel",
    "ipywidgets",
    "pre-commit",
    "pytest",
    "pytest-cookies",
    "pytest-cov",
    "ruff",
    "tox",
    "vulture",
    {% if cookiecutter.codecov == 'y' -%}
    "pytest-cov",
    {% endif -%}
    {% if cookiecutter.mypy == 'y' -%}
    "mypy",
    {% endif -%}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{% if cookiecutter.mypy == 'y' -%}
[tool.mypy]
files = ["{{cookiecutter.project_slug}}", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
{% endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]
{% if cookiecutter.codecov == "y"-%}
addopts = """
    --cov={{cookiecutter.project_slug}}
    --cov-config=pyproject.toml
    --cov-report=term
    --cov-report=lcov:lcov.info
"""
{%- else %}
addopts = "--doctest-modules"
{% endif %}

[tool.ruff]
target-version = "py38"
exclude = ["vulture_whitelist.py"]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{%- endif %}

[tool.vulture]
paths = ["{{cookiecutter.project_slug}}", "vulture_whitelist.py"]
sort_by_size = true
