[project]
name = "{{cookiecutter.project_name}}"
{% if cookiecutter.is_package == "y" -%}
dynamic = ["version"]
{% else -%}
version = "0.0.1"
{% endif %}
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["loguru"]

[tool.uv]
{% if cookiecutter.is_package == "y" -%}
publish-url = "{{cookiecutter.package_feed_url}}/upload"
{% endif -%}
dev-dependencies = [
    "deptry",
    "ipykernel",
    "ipywidgets",
    "pre-commit",
    "pytest",
    "pytest-cookies",
    "pytest-cov",
    "ruff",
    "tox",
    "vulture",
    {% if cookiecutter.codecov == 'y' -%}
    "pytest-cov",
    {% endif -%}
    {% if cookiecutter.type_checking == 'y' -%}
    "ty",
    {% endif -%}
    {% if cookiecutter.is_package == 'y' -%}
    "hatch>=1.14.0",
    {% endif -%}
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

{% if cookiecutter.is_package == "y" -%}
[tool.hatch.version]
source = "vcs"
{% endif %}

{% if cookiecutter.type_checking == 'y' -%}
[tool.ty.src]
include = ["{{cookiecutter.project_slug}}", "tests"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
unsupported-operator = "error"
unused-ignore-comment = "warn"
{% endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]
{% if cookiecutter.codecov == "y"-%}
addopts = """
    --cov={{cookiecutter.project_slug}}
    --cov-config=pyproject.toml
    --cov-report=term
    --cov-report=lcov:lcov.info
"""
{%- else %}
addopts = "--doctest-modules"
{% endif %}

[tool.ruff]
target-version = "py38"
exclude = ["vulture_whitelist.py"]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{%- endif %}

[tool.vulture]
paths = ["{{cookiecutter.project_slug}}", "vulture_whitelist.py"]
sort_by_size = true
